y.output
Terminals unused in grammar

   CHAR_PTR
   INT_PTR
   VOID_PTR


Grammar

    0 $accept: program $end

    1 program: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | function_declaration
    6                     | variable_declaration SEMICOLON

    7 variable_declaration: type_specifier identifier
    8                     | type_specifier identifier ASSIGN expression
    9                     | type_specifier identifier LBRACKET CONSTANT RBRACKET

   10 function_declaration: EXTERN type_specifier identifier LPAREN func_decl_arguments RPAREN SEMICOLON

   11 function_definition: type_specifier identifier LPAREN func_decl_arguments RPAREN compound_statement

   12 func_decl_arguments: %empty
   13                    | variable_declaration
   14                    | func_decl_arguments COMMA variable_declaration

   15 argument_expression_list: %empty
   16                         | expression
   17                         | argument_expression_list COMMA expression

   18 primary_expression: identifier
   19                   | CONSTANT
   20                   | CHAR_CONSTANT
   21                   | STRING_LITERAL
   22                   | LPAREN expression RPAREN

   23 postfix_expression: primary_expression
   24                   | identifier LBRACKET expression RBRACKET
   25                   | identifier LPAREN argument_expression_list RPAREN

   26 unary_expression: postfix_expression
   27                 | unary_operator unary_expression

   28 unary_operator: PLUS
   29               | MINUS
   30               | BIT_INVERSION
   31               | BIT_NOT

   32 multiplicative_expression: unary_expression
   33                          | multiplicative_expression MUL unary_expression
   34                          | multiplicative_expression DIV unary_expression
   35                          | multiplicative_expression MOD unary_expression

   36 additive_expression: multiplicative_expression
   37                    | additive_expression PLUS multiplicative_expression
   38                    | additive_expression MINUS multiplicative_expression

   39 shift_expression: additive_expression
   40                 | shift_expression LEFT_SHIFT additive_expression
   41                 | shift_expression RIGHT_SHIFT additive_expression

   42 relational_expression: shift_expression
   43                      | relational_expression COM_L shift_expression
   44                      | relational_expression COM_G shift_expression
   45                      | relational_expression COM_LE shift_expression
   46                      | relational_expression COM_GE shift_expression

   47 equality_expression: relational_expression
   48                    | equality_expression COM_EQ relational_expression
   49                    | equality_expression COM_NE relational_expression

   50 and_expression: equality_expression
   51               | and_expression BIT_AND equality_expression

   52 exclusive_or_expression: and_expression
   53                        | exclusive_or_expression BIT_XOR and_expression

   54 inclusive_or_expression: exclusive_or_expression
   55                        | inclusive_or_expression BIT_OR exclusive_or_expression

   56 logical_and_expression: inclusive_or_expression
   57                       | logical_and_expression LOGIC_AND inclusive_or_expression

   58 logical_or_expression: logical_and_expression
   59                      | logical_or_expression LOGIC_OR logical_and_expression

   60 expression: logical_or_expression
   61           | identifier ASSIGN expression
   62           | identifier LBRACKET expression RBRACKET ASSIGN expression

   63 type_specifier: VOID
   64               | CHAR
   65               | INT
   66               | VOID MUL
   67               | CHAR MUL
   68               | INT MUL

   69 identifier: IDENTIFIER

   70 statement: compound_statement
   71          | expression_statement
   72          | selection_statement
   73          | iteration_statement
   74          | jump_statement

   75 compound_statement: LBRACE RBRACE
   76                   | LBRACE statement_list RBRACE
   77                   | LBRACE declaration_list RBRACE
   78                   | LBRACE declaration_list statement_list RBRACE

   79 declaration_list: variable_declaration SEMICOLON
   80                 | declaration_list variable_declaration SEMICOLON

   81 statement_list: statement
   82               | statement_list statement

   83 expression_statement: SEMICOLON
   84                     | expression SEMICOLON

   85 selection_statement: IF LPAREN expression RPAREN statement
   86                    | IF LPAREN expression RPAREN statement ELSE statement

   87 iteration_statement: WHILE LPAREN expression RPAREN statement
   88                    | FOR LPAREN expression SEMICOLON expression SEMICOLON RPAREN statement
   89                    | FOR LPAREN expression SEMICOLON expression SEMICOLON expression RPAREN statement

   90 jump_statement: CONTINUE SEMICOLON
   91               | BREAK SEMICOLON
   92               | RETURN SEMICOLON
   93               | RETURN expression SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 69
STRING_LITERAL (259) 21
CONSTANT (260) 9 19
CHAR_CONSTANT (261) 20
CHAR (262) 64 67
INT (263) 65 68
VOID (264) 63 66
EXTERN (265) 10
CHAR_PTR (266)
INT_PTR (267)
VOID_PTR (268)
IF (269) 85 86
ELSE (270) 86
FOR (271) 88 89
WHILE (272) 87
CONTINUE (273) 90
BREAK (274) 91
RETURN (275) 92 93
RIGHT_SHIFT (276) 41
LEFT_SHIFT (277) 40
LOGIC_AND (278) 57
LOGIC_OR (279) 59
COM_LE (280) 45
COM_GE (281) 46
COM_EQ (282) 48
COM_NE (283) 49
SEMICOLON (284) 6 10 79 80 83 84 88 89 90 91 92 93
LBRACE (285) 75 76 77 78
RBRACE (286) 75 76 77 78
COMMA (287) 14 17
ASSIGN (288) 8 61 62
LPAREN (289) 10 11 22 25 85 86 87 88 89
RPAREN (290) 10 11 22 25 85 86 87 88 89
LBRACKET (291) 9 24 62
RBRACKET (292) 9 24 62
BIT_AND (293) 51
BIT_XOR (294) 53
BIT_OR (295) 55
BIT_NOT (296) 31
BIT_INVERSION (297) 30
MINUS (298) 29 38
PLUS (299) 28 37
MUL (300) 33 66 67 68
DIV (301) 34
MOD (302) 35
COM_L (303) 43
COM_G (304) 44
LOWER_THAN_ELSE (305)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
translation_unit (53)
    on left: 2 3, on right: 1 3
external_declaration (54)
    on left: 4 5 6, on right: 2 3
variable_declaration (55)
    on left: 7 8 9, on right: 6 13 14 79 80
function_declaration (56)
    on left: 10, on right: 5
function_definition (57)
    on left: 11, on right: 4
func_decl_arguments (58)
    on left: 12 13 14, on right: 10 11 14
argument_expression_list (59)
    on left: 15 16 17, on right: 17 25
primary_expression (60)
    on left: 18 19 20 21 22, on right: 23
postfix_expression (61)
    on left: 23 24 25, on right: 26
unary_expression (62)
    on left: 26 27, on right: 27 32 33 34 35
unary_operator (63)
    on left: 28 29 30 31, on right: 27
multiplicative_expression (64)
    on left: 32 33 34 35, on right: 33 34 35 36 37 38
additive_expression (65)
    on left: 36 37 38, on right: 37 38 39 40 41
shift_expression (66)
    on left: 39 40 41, on right: 40 41 42 43 44 45 46
relational_expression (67)
    on left: 42 43 44 45 46, on right: 43 44 45 46 47 48 49
equality_expression (68)
    on left: 47 48 49, on right: 48 49 50 51
and_expression (69)
    on left: 50 51, on right: 51 52 53
exclusive_or_expression (70)
    on left: 52 53, on right: 53 54 55
inclusive_or_expression (71)
    on left: 54 55, on right: 55 56 57
logical_and_expression (72)
    on left: 56 57, on right: 57 58 59
logical_or_expression (73)
    on left: 58 59, on right: 59 60
expression (74)
    on left: 60 61 62, on right: 8 16 17 22 24 61 62 84 85 86 87 88
    89 93
type_specifier (75)
    on left: 63 64 65 66 67 68, on right: 7 8 9 10 11
identifier (76)
    on left: 69, on right: 7 8 9 10 11 18 24 25 61 62
statement (77)
    on left: 70 71 72 73 74, on right: 81 82 85 86 87 88 89
compound_statement (78)
    on left: 75 76 77 78, on right: 11 70
declaration_list (79)
    on left: 79 80, on right: 77 78 80
statement_list (80)
    on left: 81 82, on right: 76 78 82
expression_statement (81)
    on left: 83 84, on right: 71
selection_statement (82)
    on left: 85 86, on right: 72
iteration_statement (83)
    on left: 87 88 89, on right: 73
jump_statement (84)
    on left: 90 91 92 93, on right: 74


State 0

    0 $accept: . program $end

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    EXTERN  shift, and go to state 4

    program               go to state 5
    translation_unit      go to state 6
    external_declaration  go to state 7
    variable_declaration  go to state 8
    function_declaration  go to state 9
    function_definition   go to state 10
    type_specifier        go to state 11


State 1

   64 type_specifier: CHAR .
   67               | CHAR . MUL

    MUL  shift, and go to state 12

    $default  reduce using rule 64 (type_specifier)


State 2

   65 type_specifier: INT .
   68               | INT . MUL

    MUL  shift, and go to state 13

    $default  reduce using rule 65 (type_specifier)


State 3

   63 type_specifier: VOID .
   66               | VOID . MUL

    MUL  shift, and go to state 14

    $default  reduce using rule 63 (type_specifier)


State 4

   10 function_declaration: EXTERN . type_specifier identifier LPAREN func_decl_arguments RPAREN SEMICOLON

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    type_specifier  go to state 15


State 5

    0 $accept: program . $end

    $end  shift, and go to state 16


State 6

    1 program: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    CHAR    shift, and go to state 1
    INT     shift, and go to state 2
    VOID    shift, and go to state 3
    EXTERN  shift, and go to state 4

    $default  reduce using rule 1 (program)

    external_declaration  go to state 17
    variable_declaration  go to state 8
    function_declaration  go to state 9
    function_definition   go to state 10
    type_specifier        go to state 11


State 7

    2 translation_unit: external_declaration .

    $default  reduce using rule 2 (translation_unit)


State 8

    6 external_declaration: variable_declaration . SEMICOLON

    SEMICOLON  shift, and go to state 18


State 9

    5 external_declaration: function_declaration .

    $default  reduce using rule 5 (external_declaration)


State 10

    4 external_declaration: function_definition .

    $default  reduce using rule 4 (external_declaration)


State 11

    7 variable_declaration: type_specifier . identifier
    8                     | type_specifier . identifier ASSIGN expression
    9                     | type_specifier . identifier LBRACKET CONSTANT RBRACKET
   11 function_definition: type_specifier . identifier LPAREN func_decl_arguments RPAREN compound_statement

    IDENTIFIER  shift, and go to state 19

    identifier  go to state 20


State 12

   67 type_specifier: CHAR MUL .

    $default  reduce using rule 67 (type_specifier)


State 13

   68 type_specifier: INT MUL .

    $default  reduce using rule 68 (type_specifier)


State 14

   66 type_specifier: VOID MUL .

    $default  reduce using rule 66 (type_specifier)


State 15

   10 function_declaration: EXTERN type_specifier . identifier LPAREN func_decl_arguments RPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 19

    identifier  go to state 21


State 16

    0 $accept: program $end .

    $default  accept


State 17

    3 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 3 (translation_unit)


State 18

    6 external_declaration: variable_declaration SEMICOLON .

    $default  reduce using rule 6 (external_declaration)


State 19

   69 identifier: IDENTIFIER .

    $default  reduce using rule 69 (identifier)


State 20

    7 variable_declaration: type_specifier identifier .
    8                     | type_specifier identifier . ASSIGN expression
    9                     | type_specifier identifier . LBRACKET CONSTANT RBRACKET
   11 function_definition: type_specifier identifier . LPAREN func_decl_arguments RPAREN compound_statement

    ASSIGN    shift, and go to state 22
    LPAREN    shift, and go to state 23
    LBRACKET  shift, and go to state 24

    $default  reduce using rule 7 (variable_declaration)


State 21

   10 function_declaration: EXTERN type_specifier identifier . LPAREN func_decl_arguments RPAREN SEMICOLON

    LPAREN  shift, and go to state 25


State 22

    8 variable_declaration: type_specifier identifier ASSIGN . expression

    IDENTIFIER      shift, and go to state 19
    STRING_LITERAL  shift, and go to state 26
    CONSTANT        shift, and go to state 27
    CHAR_CONSTANT   shift, and go to state 28
    LPAREN          shift, and go to state 29
    BIT_NOT         shift, and go to state 30
    BIT_INVERSION   shift, and go to state 31
    MINUS           shift, and go to state 32
    PLUS            shift, and go to state 33

    primary_expression         go to state 34
    postfix_expression         go to state 35
    unary_expression           go to state 36
    unary_operator             go to state 37
    multiplicative_expression  go to state 38
    additive_expression        go to state 39
    shift_expression           go to state 40
    relational_expression      go to state 41
    equality_expression        go to state 42
    and_expression             go to state 43
    exclusive_or_expression    go to state 44
    inclusive_or_expression    go to state 45
    logical_and_expression     go to state 46
    logical_or_expression      go to state 47
    expression                 go to state 48
    identifier                 go to state 49


State 23

   11 function_definition: type_specifier identifier LPAREN . func_decl_arguments RPAREN compound_statement

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 12 (func_decl_arguments)

    variable_declaration  go to state 50
    func_decl_arguments   go to state 51
    type_specifier        go to state 52


State 24

    9 variable_declaration: type_specifier identifier LBRACKET . CONSTANT RBRACKET

    CONSTANT  shift, and go to state 53


State 25

   10 function_declaration: EXTERN type_specifier identifier LPAREN . func_decl_arguments RPAREN SEMICOLON

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 12 (func_decl_arguments)

    variable_declaration  go to state 50
    func_decl_arguments   go to state 54
    type_specifier        go to state 52


State 26

   21 primary_expression: STRING_LITERAL .

    $default  reduce using rule 21 (primary_expression)


State 27

   19 primary_expression: CONSTANT .

    $default  reduce using rule 19 (primary_expression)


State 28

   20 primary_expression: CHAR_CONSTANT .

    $default  reduce using rule 20 (primary_expression)


State 29

   22 primary_expression: LPAREN . expression RPAREN

    IDENTIFIER      shift, and go to state 19
    STRING_LITERAL  shift, and go to state 26
    CONSTANT        shift, and go to state 27
    CHAR_CONSTANT   shift, and go to state 28
    LPAREN          shift, and go to state 29
    BIT_NOT         shift, and go to state 30
    BIT_INVERSION   shift, and go to state 31
    MINUS           shift, and go to state 32
    PLUS            shift, and go to state 33

    primary_expression         go to state 34
    postfix_expression         go to state 35
    unary_expression           go to state 36
    unary_operator             go to state 37
    multiplicative_expression  go to state 38
    additive_expression        go to state 39
    shift_expression           go to state 40
    relational_expression      go to state 41
    equality_expression        go to state 42
    and_expression             go to state 43
    exclusive_or_expression    go to state 44
    inclusive_or_expression    go to state 45
    logical_and_expression     go to state 46
    logical_or_expression      go to state 47
    expression                 go to state 55
    identifier                 go to state 49


State 30

   31 unary_operator: BIT_NOT .

    $default  reduce using rule 31 (unary_operator)


State 31

   30 unary_operator: BIT_INVERSION .

    $default  reduce using rule 30 (unary_operator)


State 32

   29 unary_operator: MINUS .

    $default  reduce using rule 29 (unary_operator)


State 33

   28 unary_operator: PLUS .

    $default  reduce using rule 28 (unary_operator)


State 34

   23 postfix_expression: primary_expression .

    $default  reduce using rule 23 (postfix_expression)


State 35

   26 unary_expression: postfix_expression .

    $default  reduce using rule 26 (unary_expression)


State 36

   32 multiplicative_expression: unary_expression .

    $default  reduce using rule 32 (multiplicative_expression)


State 37

   27 unary_expression: unary_operator . unary_expression

    IDENTIFIER      shift, and go to state 19
    STRING_LITERAL  shift, and go to state 26
    CONSTANT        shift, and go to state 27
    CHAR_CONSTANT   shift, and go to state 28
    LPAREN          shift, and go to state 29
    BIT_NOT         shift, and go to state 30
    BIT_INVERSION   shift, and go to state 31
    MINUS           shift, and go to state 32
    PLUS            shift, and go to state 33

    primary_expression  go to state 34
    postfix_expression  go to state 35
    unary_expression    go to state 56
    unary_operator      go to state 37
    identifier          go to state 57


State 38

   33 multiplicative_expression: multiplicative_expression . MUL unary_expression
   34                          | multiplicative_expression . DIV unary_expression
   35                          | multiplicative_expression . MOD unary_expression
   36 additive_expression: multiplicative_expression .

    MUL  shift, and go to state 58
    DIV  shift, and go to state 59
    MOD  shift, and go to state 60

    $default  reduce using rule 36 (additive_expression)


State 39

   37 additive_expression: additive_expression . PLUS multiplicative_expression
   38                    | additive_expression . MINUS multiplicative_expression
   39 shift_expression: additive_expression .

    MINUS  shift, and go to state 61
    PLUS   shift, and go to state 62

    $default  reduce using rule 39 (shift_expression)


State 40

   40 shift_expression: shift_expression . LEFT_SHIFT additive_expression
   41                 | shift_expression . RIGHT_SHIFT additive_expression
   42 relational_expression: shift_expression .

    RIGHT_SHIFT  shift, and go to state 63
    LEFT_SHIFT   shift, and go to state 64

    $default  reduce using rule 42 (relational_expression)


State 41

   43 relational_expression: relational_expression . COM_L shift_expression
   44                      | relational_expression . COM_G shift_expression
   45                      | relational_expression . COM_LE shift_expression
   46                      | relational_expression . COM_GE shift_expression
   47 equality_expression: relational_expression .

    COM_LE  shift, and go to state 65
    COM_GE  shift, and go to state 66
    COM_L   shift, and go to state 67
    COM_G   shift, and go to state 68

    $default  reduce using rule 47 (equality_expression)


State 42

   48 equality_expression: equality_expression . COM_EQ relational_expression
   49                    | equality_expression . COM_NE relational_expression
   50 and_expression: equality_expression .

    COM_EQ  shift, and go to state 69
    COM_NE  shift, and go to state 70

    $default  reduce using rule 50 (and_expression)


State 43

   51 and_expression: and_expression . BIT_AND equality_expression
   52 exclusive_or_expression: and_expression .

    BIT_AND  shift, and go to state 71

    $default  reduce using rule 52 (exclusive_or_expression)


State 44

   53 exclusive_or_expression: exclusive_or_expression . BIT_XOR and_expression
   54 inclusive_or_expression: exclusive_or_expression .

    BIT_XOR  shift, and go to state 72

    $default  reduce using rule 54 (inclusive_or_expression)


State 45

   55 inclusive_or_expression: inclusive_or_expression . BIT_OR exclusive_or_expression
   56 logical_and_expression: inclusive_or_expression .

    BIT_OR  shift, and go to state 73

    $default  reduce using rule 56 (logical_and_expression)


State 46

   57 logical_and_expression: logical_and_expression . LOGIC_AND inclusive_or_expression
   58 logical_or_expression: logical_and_expression .

    LOGIC_AND  shift, and go to state 74

    $default  reduce using rule 58 (logical_or_expression)


State 47

   59 logical_or_expression: logical_or_expression . LOGIC_OR logical_and_expression
   60 expression: logical_or_expression .

    LOGIC_OR  shift, and go to state 75

    $default  reduce using rule 60 (expression)


State 48

    8 variable_declaration: type_specifier identifier ASSIGN expression .

    $default  reduce using rule 8 (variable_declaration)


State 49

   18 primary_expression: identifier .
   24 postfix_expression: identifier . LBRACKET expression RBRACKET
   25                   | identifier . LPAREN argument_expression_list RPAREN
   61 expression: identifier . ASSIGN expression
   62           | identifier . LBRACKET expression RBRACKET ASSIGN expression

    ASSIGN    shift, and go to state 76
    LPAREN    shift, and go to state 77
    LBRACKET  shift, and go to state 78

    $default  reduce using rule 18 (primary_expression)


State 50

   13 func_decl_arguments: variable_declaration .

    $default  reduce using rule 13 (func_decl_arguments)


State 51

   11 function_definition: type_specifier identifier LPAREN func_decl_arguments . RPAREN compound_statement
   14 func_decl_arguments: func_decl_arguments . COMMA variable_declaration

    COMMA   shift, and go to state 79
    RPAREN  shift, and go to state 80


State 52
